# uDOS-sonic-screwdriver

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LEGAL.md  README.md  pyproject.toml  sonic-open  sonic_cli.py  structure.txt
.cursor/rules/: main-and-pr-finalization.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml
apps/sonic-cli/: README.md  cli.py
apps/sonic-ui/: README.md  index.html
courses/: README.md
courses/01-sonic-screwdriver/: README.md  prerequisites.md
courses/03-extension-and-customization/: README.md
courses/03-portable-dev-systems/: README.md
distribution/: README.md
docs/: BINDER-BREAKDOWN-v1.6.md  README.md  REPO_FAMILY.md  ROADMAP-v1.6.md  SESSION-ARCHIVE-2026-03-10.md  SESSION-SUMMARY-2026-03-10.md  activation.md  architecture.md  boundary.md  getting-started.md  operator-quickstart.md  sonic-tui-charter.md  structure-policy.md  thin-gui-launcher-integration.md
examples/: README.md  basic-sonic-session.md
modules/: README.md
scripts/: README.md  demo-thinui-launch.sh  first-run-launch.sh  first-run-preflight.sh  linux-runner-validation.sh  run-sonic-checks.sh  sonic-open.command  sonic-open.sh
services/: sonic_stick_integration.py
tests/: README.md  test_ci_workflow_ubuntu_ventoy_smoke.py  test_packaging_setup.py  test_sonic_cli.py  test_sonic_stick_integration.py  test_thinui_demo.py  test_ubuntu_ventoy_integration_smoke_script.py  test_uhome_contract_conformance_script.py
udos_sonic/: __init__.py  services.py
wiki/: Education-Pathways.md  Getting-Started.md
(+30 files in other folders)
