[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "udos-sonic"
version = "1.5.5"
description = "sonic-screwdriver deployment and hardware bootstrap toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Fred Porter" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
sonic = "sonic_cli:main"
sonic-api = "services.http_api:main"
sonic-mcp = "services.mcp_server:main"

[tool.setuptools]
py-modules = ["sonic_cli"]

[tool.setuptools.packages.find]
include = ["services*", "installers*", "udos_sonic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
